--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -35,7 +35,7 @@
     </button>
 
     <button type="button" id="trendsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'trendsTab' ? 'btn-tab-active' : '' %>">
-      <%= inline_svg_tag 'icons/chart-bar.svg', class: 'size-5' %>
+      <%= inline_svg_tag 'icons/arrow-trending-up.svg', class: 'size-5' %>
       <span>Trends</span>
     </button>
   </div>
